[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Game_Over.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sounds/Button.wav" type="AudioStream" id=2]
[ext_resource path="res://UI/05_Menu_Theme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/LeagueGothic-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 23
outline_size = 1
font_data = ExtResource( 4 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Background_Image2" type="Sprite" parent="."]
position = Vector2( 970, 940 )
offset = Vector2( -462, -430 )

[node name="GAME OVER" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = 1.0
margin_right = -2.0
margin_bottom = -281.0
text = "GAME OVER"
align = 1
valign = 1

[node name="Label" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -84.5
margin_bottom = -23.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
custom_fonts/font = SubResource( 1 )
text = "YOUR SCORE:
PLAY AGAIN?"
align = 1
valign = 1

[node name="Play_Again" type="Button" parent="."]
margin_left = 412.0
margin_top = 300.0
margin_right = 612.0
margin_bottom = 336.0
text = "Play Again"

[node name="Exit" type="Button" parent="."]
margin_left = 412.0
margin_top = 356.0
margin_right = 612.0
margin_bottom = 392.0
text = "Exit"

[node name="Button_Sound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 2 )
volume_db = -10.0

[connection signal="pressed" from="Play_Again" to="." method="_on_Play_Again_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
